--- a/static/index.html
+++ b/static/index.html
@@ -53,7 +53,8 @@
                     <div class="panel-header">
                         <h2>3D Gaussian Splat</h2>
                         <div class="header-controls">
-                            <select id="splat-quality" class="sm-select" title="Quality" disabled>
+                            <select id="splat-quality" class="sm-select"
+                                title="Quality: &#10;Preview: Low res (Fast). &#10;Full HQ: High res (Slow)." disabled>
                                 <option value="preview">Preview</option>
                                 <option value="full">Full HQ</option>
                             </select>
@@ -102,7 +103,8 @@
 
                 <!-- Parameters -->
                 <div class="params-row">
-                    <div class="param-group">
+                    <div class="param-group"
+                        title="Downsampling factor. &#10;1 (Max): Every pixel. &#10;8 (Fast): Every 8th pixel.">
                         <label for="stride">Stride</label>
                         <select id="stride">
                             <option value="1" selected>1 (Max)</option>
@@ -112,27 +114,33 @@
                         </select>
                     </div>
 
-                    <div class="param-group">
+                    <div class="param-group"
+                        title="Size multiplier for each splat. &#10;Increase to fill holes. &#10;Decrease for sharper details.">
                         <label for="scale-factor">Scale</label>
                         <input type="number" id="scale-factor" value="1.5" min="0.5" max="3" step="0.1">
                     </div>
 
-                    <div class="param-group">
+                    <div class="param-group"
+                        title="Thickness ratio of splats. &#10;Lower values make flat disks. &#10;Higher values make spheres.">
                         <label for="thickness">Thickness</label>
                         <input type="number" id="thickness" value="0.1" min="0.01" max="0.5" step="0.01">
                     </div>
 
-                    <div class="param-group">
+                    <div class="param-group"
+                        title="Global depth multiplier. &#10;Adjust if the world scale feels too large or small.">
                         <label for="global-scale">Depth Scale</label>
                         <input type="number" id="global-scale" value="1.0" min="0.1" max="10" step="0.1">
                     </div>
 
-                    <div class="param-group range-group">
+                    <div class="param-group range-group"
+                        title="Valid depth range in meters. &#10;Points outside this range are clipped.">
                         <label>Depth Range (m)</label>
                         <div class="range-inputs">
-                            <input type="number" id="depth-min" value="0.1" min="0.01" max="10" step="0.1">
+                            <input type="number" id="depth-min" value="0.1" min="0.01" max="10" step="0.1"
+                                title="Minimum depth">
                             <span>–</span>
-                            <input type="number" id="depth-max" value="100" min="10" max="1000" step="10">
+                            <input type="number" id="depth-max" value="100" min="10" max="1000" step="10"
+                                title="Maximum depth">
                         </div>
                     </div>
                 </div>
