feat: Add Depth Anything V3 (DA3) as depth model option
- Add da3_model.py wrapper using DA3Metric-Large for metric depth
- Add 'da3' to depth model selector in core/CLI/API/UI
- DA3 auto-downloads from HuggingFace via depth_anything_3 package
- PanDA remains default; DA3 available as general-purpose alternative
- Update README, help panel with DA3 documentation

--- a/static/index.html
+++ b/static/index.html
@@ -116,6 +116,7 @@
                     <dt>Depth Model</dt>
                     <dd><strong>PanDA</strong> (CVPR 2025): Fine-tuned for 360° with sharper edges and better
                         small-object depth.
+                        <strong>DA3</strong> (Depth Anything V3): Latest general-purpose metric depth model.
                         <strong>DAP</strong>: Original model, metric depth. Use PanDA for best results.
                     </dd>
 
@@ -264,6 +265,7 @@
                         <label for="depth-model">Depth Model</label>
                         <select id="depth-model">
                             <option value="panda" selected>PanDA</option>
+                            <option value="da3">DA3</option>
                             <option value="dap">DAP (Legacy)</option>
                         </select>
                     </div>
